[package]
name = "flexcan-test"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-mcxa = { git = "https://github.com/bjackson312006/embassy.git", branch = "flexcan", features = ["mcxa2xx", "unstable-pac", "defmt"] }
embassy-executor = { git = "https://github.com/bjackson312006/embassy.git", branch = "flexcan", features = ["platform-cortex-m", "executor-thread"] }
embassy-time = { git = "https://github.com/bjackson312006/embassy.git", branch = "flexcan", features = ["defmt", "defmt-timestamp-uptime"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "1.0", features = ["print-defmt"] }
static_cell = "2.1.1"
defmt = { version = "1.0" }
defmt-rtt = "1.0"
bilge = "0.3.0"
arbitrary-int = "2.1.1"
